--- a/portal/package.json
+++ b/portal/package.json
@@ -11,6 +11,7 @@
         "@fremtind/jkl-portal-components": "^0.3.4",
         "@mdx-js/mdx": "^1.5.1",
         "@mdx-js/react": "^1.5.1",
+        "downloadjs": "^1.4.7",
         "gatsby": "^2.11.7",
         "gatsby-image": "^2.2.6",
         "gatsby-plugin-layout": "^1.3.5",
